set up for instagram

--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 
 
     <div class="wrapper">
+
       <div id="map-canvas"></div>
-      <div id="ig"></div>
+
+      <div class="left-side">
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+      <script type="text/javascript" src="instagram.js"></script>
+
     </div>
 
   
