--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
       <div id="map-canvas"></div>
 
-      <div class="left-side">
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+      <div class="right-side">
       <script type="text/javascript" src="instagram.js"></script>
+    </div>
 
     </div>
 
