change right-side to id

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
       <div id="map-canvas"></div>
 
-      <div class="right-side">
+      <div id="right-side">
       <script type="text/javascript" src="instagram.js"></script>
-    </div>
+      </div>
 
     </div>
 
