--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
     <div class="wrapper">
 
-      <div id="map-canvas"></div>
+      
 
-      <div id="right-side">
+      <div id="ig">
       <script type="text/javascript" src="instagram.js"></script>
       </div>
-
+      <div id="map-canvas"></div>
     </div>
 
   
