change some crap shit

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
 
     <link rel="stylesheet" href="SF Map.css">
+
     <style type="text/css"></style>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0Gp3qCWIhHWzkcwC95OBqGO9dmhRMoks&sensor=true"></script>
@@ -17,18 +19,12 @@
 
   <body>
 
-
-
     <div class="wrapper">
 
-      
-
-      <div id="ig">
-      <script type="text/javascript" src="instagram.js"></script>
-      </div>
+      <div id="ig"></div>
       <div id="map-canvas"></div>
+
     </div>
 
-  
   </body>
 </html>
