--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
@@ -21,7 +21,7 @@
 
     <div class="wrapper">
 
-      <div id="ig"></div>
+      <div class="ig"></div>
       <div id="map-canvas"></div>
 
     </div>
