I'm gunna kill someone

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0Gp3qCWIhHWzkcwC95OBqGO9dmhRMoks&sensor=true"></script>
 
-    <script src="SF Map.js"></script>
+    <script type="text/javascript" src="SF Map.js"></script>
+  
 
   </head>
 
